--- a/nibadilishe/package.json
+++ b/nibadilishe/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
+    "animate.css": "^4.1.1",
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
