--- a/nibadilishe/package.json
+++ b/nibadilishe/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
     "aos": "^2.3.4",
+    "axios": "^1.7.3",
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
